# cpp-search-engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
.github/workflows/: ci.yml
build_tmp/: CTestTestfile.cmake  search_app  search_engine_tests[1]_include.cmake  search_engine_tests[1]_tests.cmake
build_tmp/Testing/Temporary/: CTestCostData.txt
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  exceptions.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
scripts/: run_search.bat
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  search_app.cpp
tests/: main.cpp  test_search_engine.cpp
